--- a/ShopXam/ShopXam.Web/Views/Products/Create.cshtml
+++ b/ShopXam/ShopXam.Web/Views/Products/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Nuevo Producto</h2>
 
-<h4>Product</h4>
+<h4>Producto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,21 +17,31 @@
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Precio" class="control-label"></label>
                 <input asp-for="Precio" class="form-control" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ImageUrl" class="control-label"></label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="UltimaCompra" class="control-label"></label>
                 <input asp-for="UltimaCompra" class="form-control" />
                 <span asp-validation-for="UltimaCompra" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="UltimaVenta" class="control-label"></label>
+                <input asp-for="UltimaVenta" class="form-control" />
+                <span asp-validation-for="UltimaVenta" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <div class="checkbox">
                     <label>
@@ -45,15 +55,13 @@
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-success">Volver al listado</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
