--- a/ShopXam/ShopXam.Web/Views/Products/Details.cshtml
+++ b/ShopXam/ShopXam.Web/Views/Products/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalle Productos</h2>
 
 <div>
-    <h4>Product</h4>
+    <h4>Productos</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -35,6 +35,12 @@
             @Html.DisplayFor(model => model.UltimaCompra)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.UltimaVenta)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.UltimaVenta)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Disponible)
         </dt>
         <dd>
@@ -49,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a> |
+    <a asp-action="Index" class="btn btn-success">Back to List</a>
 </div>
