--- a/ShopXam/ShopXam.Web/Views/Products/Edit.cshtml
+++ b/ShopXam/ShopXam.Web/Views/Products/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar Producto</h2>
 
-<h4>Product</h4>
+<h4>Producto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,6 +34,11 @@
                 <span asp-validation-for="UltimaCompra" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UltimaVenta" class="control-label"></label>
+                <input asp-for="UltimaVenta" class="form-control" />
+                <span asp-validation-for="UltimaVenta" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="Disponible" /> @Html.DisplayNameFor(model => model.Disponible)
@@ -46,14 +51,11 @@
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-success">Volver al listado</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
