--- a/ShopXam/ShopXam.Web/Views/Products/Index.cshtml
+++ b/ShopXam/ShopXam.Web/Views/Products/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Productos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Nuevo Producto</a>
 </p>
 <table class="table">
     <thead>
@@ -23,6 +23,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UltimaCompra)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UltimaVenta)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Disponible)
@@ -49,15 +52,18 @@
                 @Html.DisplayFor(modelItem => item.UltimaCompra)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.UltimaVenta)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Disponible)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Stock)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
 }
