--- a/ShopXam/ShopXam.Web/Views/Products/Edit.cshtml
+++ b/ShopXam/ShopXam.Web/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShopXam.Web.Data.Entities.Product
+﻿@model ShopXam.Web.Models.ProductViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -25,8 +25,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <input asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UltimaCompra" class="control-label"></label>
@@ -55,6 +55,12 @@
                 <a asp-action="Index" class="btn btn-success">Volver al listado</a>
             </div>
         </form>
+    </div>
+    <div class="col-md-4">
+        @if (!string.IsNullOrEmpty(Model.ImageUrl))
+        {
+            <img src="@Url.Content(Model.ImageUrl)" alt="Image" style="width:300px; height:450px;max-width:100%;height:auto">
+        }
     </div>
 </div>
 
